# Physics-Simulator

./: README.md
physics-sim/: README.md  architecture.md  maths.md  pyproject.toml  spec.md
physics-sim/benchmarks/: bench_steps.py
physics-sim/examples/: elastic_collision.py  em_coulomb_orbitish.py  minimal_freefall.py  pendulum.py
physics-sim/examples/scenes/: freefall.json
physics-sim/src/physics_sim/: __init__.py  constants.py  materials.py  profiler.py  scene.py  types.py  util.py
physics-sim/src/physics_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
physics-sim/src/physics_sim/collision/: __init__.py  broadphase.py  ccd.py  contact.py  convex.py  epa.py  gjk.py  manager.py  shapes.py
physics-sim/src/physics_sim/constraints/: __init__.py  solver.py
physics-sim/src/physics_sim/core/: __init__.py  forces.py  integrators.py  invariants.py  island.py
physics-sim/src/physics_sim/io/: __init__.py  json_io.py
physics-sim/src/physics_sim/renderer/: __init__.py  adapter.py
physics-sim/tests/: repro_box_circle.py  test_elastic_collision.py  test_freefall.py  test_joints.py  test_mouse.py  test_pendulum_constraint.py  test_polygon.py  test_rolling_friction.py  test_sleep.py  test_stack.py
