[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-sim"
version = "0.1.0"
description = "Deterministic 2D rigid-body mechanics + quasi-static EM simulator with verification harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.2"]
numba = ["numba>=0.59"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
timeout = 30

[tool.setuptools]
package-dir = {"" = "src"}
